// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeEditor matches snapshot with all props 1`] = `
<DocumentFragment>
  <div
    class="pf-c-code-editor pf-m-read-only"
  >
    <div
      class="pf-c-file-upload undefined false"
      tabindex="0"
    >
      <div
        class="pf-c-code-editor__header"
      >
        <div
          class="pf-c-code-editor__controls"
        >
          <button
            aria-disabled="false"
            aria-label="Copy code to clipboard"
            class="pf-c-button pf-m-control"
            data-ouia-component-id="OUIA-Generated-Button-control-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
              />
            </svg>
          </button>
          <button
            aria-disabled="false"
            aria-label="Upload code"
            class="pf-c-button pf-m-control"
            data-ouia-component-id="OUIA-Generated-Button-control-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
              />
            </svg>
          </button>
          <button
            aria-disabled="false"
            aria-label="Download code"
            class="pf-c-button pf-m-control"
            data-ouia-component-id="OUIA-Generated-Button-control-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-code-editor__header-main"
        />
        <div
          class="pf-c-code-editor__tab"
        >
          <span
            class="pf-c-code-editor__tab-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 640 512"
              width="1em"
            >
              <path
                d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
              />
            </svg>
          </span>
          <span
            class="pf-c-code-editor__tab-text"
          >
            JAVASCRIPT
          </span>
        </div>
      </div>
      <div
        class="pf-c-code-editor__main"
      >
        <input
          autocomplete="off"
          style="display: none;"
          tabindex="-1"
          type="file"
        />
        <div
          class="pf-c-code-editor__code"
          tabindex="0"
        >
          <div
            class="react-monaco-editor-container"
            data-keybinding-context="1"
            data-mode-id="plaintext"
            style="height: 400px;"
          >
            <div
              class="monaco-editor showUnused showDeprecated vs-dark"
              data-uri="inmemory://model/2"
              style="width: 5px; height: 5px;"
            >
              <div
                class="overflow-guard"
                data-mprt="3"
                style="width: 5px; height: 5px;"
              >
                <div
                  aria-hidden="true"
                  class="margin"
                  role="presentation"
                  style="position: absolute;"
                >
                  <div
                    class="glyph-margin"
                  />
                  <div
                    aria-hidden="true"
                    class="margin-view-zones"
                    role="presentation"
                    style="position: absolute;"
                  />
                  <div
                    aria-hidden="true"
                    class="margin-view-overlays"
                    role="presentation"
                    style="position: absolute; width: 1px; font-family: Consolas, 'Courier New', monospace; font-weight: normal; font-size: 14px; font-feature-settings: \\"liga\\" off, \\"calt\\" off; line-height: 19px; letter-spacing: 0px;"
                  />
                </div>
                <div
                  class="monaco-scrollable-element editor-scrollable vs-dark"
                  data-mprt="5"
                  role="presentation"
                  style="position: absolute; overflow: hidden; left: 26px; width: -21px; height: 5px;"
                >
                  <div
                    class="lines-content monaco-editor-background"
                    style="position: absolute; overflow: hidden; width: 1000000px; height: 1000000px; transform: translate3d(0px, 0px, 0px); contain: strict; top: 0px; left: 0px;"
                  >
                    <div
                      aria-hidden="true"
                      class="view-overlays"
                      role="presentation"
                      style="position: absolute; height: 0px;"
                    />
                    <div
                      aria-hidden="true"
                      class="view-rulers"
                      role="presentation"
                    />
                    <div
                      aria-hidden="true"
                      class="view-zones"
                      role="presentation"
                      style="position: absolute;"
                    />
                    <div
                      aria-hidden="true"
                      class="view-lines monaco-mouse-cursor-text"
                      data-mprt="7"
                      role="presentation"
                      style="position: absolute; font-family: Consolas, 'Courier New', monospace; font-weight: normal; font-size: 14px; font-feature-settings: \\"liga\\" off, \\"calt\\" off; line-height: 19px; letter-spacing: 0px; width: 45px; height: 5px;"
                    >
                      <div
                        class="view-line"
                        style="top:0px;height:19px;"
                      >
                        <span>
                          <span
                            class="mtk1"
                          >
                            test
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="contentWidgets"
                      data-mprt="1"
                      style="position: absolute; top: 0px;"
                    />
                    <div
                      aria-hidden="true"
                      class="cursors-layer cursor-line-style cursor-solid"
                      role="presentation"
                    >
                      <div
                        class="cursor monaco-mouse-cursor-text"
                        style="height: 19px; top: 0px; left: 0px; font-family: Consolas, 'Courier New', monospace; font-weight: normal; font-size: 14px; font-feature-settings: \\"liga\\" off, \\"calt\\" off; line-height: 19px; letter-spacing: 0px; display: none; visibility: hidden;"
                      />
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    class="invisible scrollbar horizontal"
                    role="presentation"
                    style="position: absolute; width: 0px; height: 12px; left: 0px; bottom: 0px;"
                  >
                    <div
                      class="slider"
                      style="position: absolute; top: 0px; left: 0px; height: 12px; transform: translate3d(0px, 0px, 0px); contain: strict; width: 20px;"
                    />
                  </div>
                  <canvas
                    aria-hidden="true"
                    class="decorationsOverviewRuler"
                    height="5"
                    style="position: absolute; transform: translate3d(0px, 0px, 0px); contain: strict; top: 0px; right: 0px; width: 14px; height: 5px;"
                    width="14"
                  />
                  <div
                    aria-hidden="true"
                    class="invisible scrollbar vertical"
                    role="presentation"
                    style="position: absolute; width: 14px; height: 5px; right: 0px; top: 0px;"
                  >
                    <div
                      class="slider"
                      style="position: absolute; top: 0px; left: 0px; width: 14px; transform: translate3d(0px, 0px, 0px); contain: strict; height: 5px;"
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  role="presentation"
                />
                <textarea
                  aria-autocomplete="both"
                  aria-haspopup="false"
                  aria-label="Editor content;Press Alt+F1 for Accessibility Options."
                  aria-multiline="true"
                  aria-roledescription="editor"
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="inputarea monaco-mouse-cursor-text"
                  data-mprt="6"
                  readonly="true"
                  role="textbox"
                  spellcheck="false"
                  style="font-family: Consolas, 'Courier New', monospace; font-weight: normal; font-size: 14px; font-feature-settings: \\"liga\\" off, \\"calt\\" off; line-height: 19px; letter-spacing: 0px; top: 0px; left: 0px; width: 1px; height: 1px;"
                  tabindex="-1"
                  wrap="off"
                />
                <div
                  class="monaco-editor-background textAreaCover"
                  style="position: absolute; top: 0px; left: 0px; width: 1px; height: 1px;"
                />
                <div
                  class="overlayWidgets"
                  data-mprt="4"
                >
                  <div
                    style="position: absolute;"
                    widgetid="editor.contrib.quickInputWidget"
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="minimap slider-mouseover"
                  data-mprt="8"
                  role="presentation"
                  style="position: absolute; left: 0px; width: 0px; height: 5px;"
                >
                  <div
                    class="minimap-shadow-hidden"
                    style="height: 5px;"
                  />
                  <canvas
                    height="5"
                    style="position: absolute; left: 0px; width: 0px; height: 5px;"
                    width="0"
                  />
                  <canvas
                    class="minimap-decorations-layer"
                    height="5"
                    style="position: absolute; left: 0px; width: 0px; height: 5px;"
                    width="0"
                  />
                  <div
                    class="minimap-slider"
                    style="position: absolute; transform: translate3d(0px, 0px, 0px); contain: strict; width: 0px;"
                  >
                    <div
                      class="minimap-slider-horizontal"
                      style="position: absolute;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="overflowingContentWidgets"
                data-mprt="2"
              />
              <div
                aria-hidden="true"
                class="context-view"
                style="display: none;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CodeEditor matches snapshot without props 1`] = `
<DocumentFragment>
  <div
    class="pf-c-code-editor"
  >
    <div
      class="pf-c-code-editor__header"
    >
      <div
        class="pf-c-code-editor__controls"
      />
      <div
        class="pf-c-code-editor__header-main"
      />
    </div>
    <div
      class="pf-c-code-editor__main"
    >
      <div
        class="pf-c-code-editor__code"
        tabindex="0"
      >
        <div
          class="react-monaco-editor-container"
          data-keybinding-context="1"
          data-mode-id="plaintext"
        >
          <div
            class="monaco-editor showUnused showDeprecated vs"
            data-uri="inmemory://model/1"
            style="width: 5px; height: 5px;"
          >
            <div
              class="overflow-guard"
              data-mprt="3"
              style="width: 5px; height: 5px;"
            >
              <div
                aria-hidden="true"
                class="margin"
                role="presentation"
                style="position: absolute;"
              >
                <div
                  class="glyph-margin"
                />
                <div
                  aria-hidden="true"
                  class="margin-view-zones"
                  role="presentation"
                  style="position: absolute;"
                />
                <div
                  aria-hidden="true"
                  class="margin-view-overlays"
                  role="presentation"
                  style="position: absolute; width: 1px; font-family: Consolas, 'Courier New', monospace; font-weight: normal; font-size: 14px; font-feature-settings: \\"liga\\" off, \\"calt\\" off; line-height: 19px; letter-spacing: 0px;"
                />
              </div>
              <div
                class="monaco-scrollable-element editor-scrollable vs"
                data-mprt="5"
                role="presentation"
                style="position: absolute; overflow: hidden; left: 51px; width: -46px; height: 5px;"
              >
                <div
                  class="lines-content monaco-editor-background"
                  style="position: absolute; overflow: hidden; width: 1000000px; height: 1000000px; transform: translate3d(0px, 0px, 0px); contain: strict; top: 0px; left: 0px;"
                >
                  <div
                    aria-hidden="true"
                    class="view-overlays"
                    role="presentation"
                    style="position: absolute; height: 0px;"
                  />
                  <div
                    aria-hidden="true"
                    class="view-rulers"
                    role="presentation"
                  />
                  <div
                    aria-hidden="true"
                    class="view-zones"
                    role="presentation"
                    style="position: absolute;"
                  />
                  <div
                    aria-hidden="true"
                    class="view-lines monaco-mouse-cursor-text"
                    data-mprt="7"
                    role="presentation"
                    style="position: absolute; font-family: Consolas, 'Courier New', monospace; font-weight: normal; font-size: 14px; font-feature-settings: \\"liga\\" off, \\"calt\\" off; line-height: 19px; letter-spacing: 0px; width: 26px; height: 5px;"
                  >
                    <div
                      class="view-line"
                      style="top:0px;height:19px;"
                    >
                      <span>
                        <span />
                      </span>
                    </div>
                  </div>
                  <div
                    class="contentWidgets"
                    data-mprt="1"
                    style="position: absolute; top: 0px;"
                  />
                  <div
                    aria-hidden="true"
                    class="cursors-layer cursor-line-style cursor-solid"
                    role="presentation"
                  >
                    <div
                      class="cursor monaco-mouse-cursor-text"
                      style="height: 19px; top: 0px; left: 0px; font-family: Consolas, 'Courier New', monospace; font-weight: normal; font-size: 14px; font-feature-settings: \\"liga\\" off, \\"calt\\" off; line-height: 19px; letter-spacing: 0px; display: none; visibility: hidden;"
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="invisible scrollbar horizontal"
                  role="presentation"
                  style="position: absolute; width: 0px; height: 12px; left: 0px; bottom: 0px;"
                >
                  <div
                    class="slider"
                    style="position: absolute; top: 0px; left: 0px; height: 12px; transform: translate3d(0px, 0px, 0px); contain: strict; width: 20px;"
                  />
                </div>
                <canvas
                  aria-hidden="true"
                  class="decorationsOverviewRuler"
                  height="5"
                  style="position: absolute; transform: translate3d(0px, 0px, 0px); contain: strict; top: 0px; right: 0px; width: 14px; height: 5px;"
                  width="14"
                />
                <div
                  aria-hidden="true"
                  class="invisible scrollbar vertical"
                  role="presentation"
                  style="position: absolute; width: 14px; height: 5px; right: 0px; top: 0px;"
                >
                  <div
                    class="slider"
                    style="position: absolute; top: 0px; left: 0px; width: 14px; transform: translate3d(0px, 0px, 0px); contain: strict; height: 5px;"
                  />
                </div>
              </div>
              <div
                aria-hidden="true"
                role="presentation"
              />
              <textarea
                aria-autocomplete="both"
                aria-haspopup="false"
                aria-label="Editor content;Press Alt+F1 for Accessibility Options."
                aria-multiline="true"
                aria-roledescription="editor"
                autocapitalize="off"
                autocomplete="off"
                autocorrect="off"
                class="inputarea monaco-mouse-cursor-text"
                data-mprt="6"
                role="textbox"
                spellcheck="false"
                style="font-family: Consolas, 'Courier New', monospace; font-weight: normal; font-size: 14px; font-feature-settings: \\"liga\\" off, \\"calt\\" off; line-height: 19px; letter-spacing: 0px; top: 0px; left: 0px; width: 1px; height: 1px;"
                tabindex="-1"
                wrap="off"
              />
              <div
                class="monaco-editor-background textAreaCover line-numbers"
                style="position: absolute; top: 0px; left: 0px; width: 1px; height: 1px;"
              />
              <div
                class="overlayWidgets"
                data-mprt="4"
              >
                <div
                  style="position: absolute;"
                  widgetid="editor.contrib.quickInputWidget"
                />
              </div>
              <div
                aria-hidden="true"
                class="minimap slider-mouseover"
                data-mprt="8"
                role="presentation"
                style="position: absolute; left: 0px; width: 0px; height: 5px;"
              >
                <div
                  class="minimap-shadow-hidden"
                  style="height: 5px;"
                />
                <canvas
                  height="5"
                  style="position: absolute; left: 0px; width: 0px; height: 5px;"
                  width="0"
                />
                <canvas
                  class="minimap-decorations-layer"
                  height="5"
                  style="position: absolute; left: 0px; width: 0px; height: 5px;"
                  width="0"
                />
                <div
                  class="minimap-slider"
                  style="position: absolute; transform: translate3d(0px, 0px, 0px); contain: strict; width: 0px;"
                >
                  <div
                    class="minimap-slider-horizontal"
                    style="position: absolute;"
                  />
                </div>
              </div>
            </div>
            <div
              class="overflowingContentWidgets"
              data-mprt="2"
            />
            <div
              aria-hidden="true"
              class="context-view"
              style="display: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
